<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@color/purple"
    tools:context=".Registration">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="UselessParent"
        android:gravity="center">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/name"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/white"
            android:inputType="textPersonName"
            android:textColor="@color/white"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/email"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:importantForAutofill="no"/>
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:importantForAutofill="no"/>
        <EditText
            android:id="@+id/editTextPasswordConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/password_confirm"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/white"
            android:inputType="textPassword"
            android:textColor="@color/white"
            tools:ignore="TextFields"
            android:importantForAutofill="no"/>
        <ImageView
            android:id="@+id/userImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:background="@color/white"/>
        <Button
            android:id="@+id/selectImageBtn"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/selectImage"
            android:textSize="14sp"
            android:background="@drawable/btn_login" />

        <Button
            android:id="@+id/RegisterBtn"
            android:layout_width="180dp"
            android:layout_marginTop="30dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/register"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:stateListAnimator="@null"
            tools:ignore="UnusedAttribute" />
        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            android:outlineSpotShadowColor="@color/blue"/>

    </LinearLayout>


</RelativeLayout>