<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple"
    android:gravity="center"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="40sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:hint="@string/email"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/white"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:importantForAutofill="no" />
        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:background="@drawable/edittext_background"
            android:textColorHint="@color/white"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:importantForAutofill="no"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:paddingTop="10dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textSize="14sp"
                android:textColor="@color/white" />
            <TextView
                android:id="@+id/RegisterTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text=" Register"
                android:textSize="14sp"
                android:textColor="@color/blue"
                tools:ignore="HardcodedText" />
        </LinearLayout>
        <Button
            android:id="@+id/LoginBtn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_login"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="14sp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:stateListAnimator="@null"
            tools:ignore="UnusedAttribute" />
        <ProgressBar
            android:id="@+id/loading"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="invisible"
            android:outlineSpotShadowColor="@color/blue"/>


    </LinearLayout>
</RelativeLayout>