<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:background="@color/purple"
    tools:context=".menu">
    <ImageView
        android:id="@+id/user_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        app:srcCompat="@drawable/user"/>
    <TextView
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Username"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="200dp"/>
    <TextView
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="Email"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="200dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right">
        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/logout"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:onClick="logout"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:orientation="vertical"
        android:layout_marginTop="250dp">

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Number of points"/>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="300dp">
        <TextView
            android:id="@+id/discount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Next discount"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/purple"
        android:layout_marginTop="500dp"
        android:gravity="center">
        <Button
            android:id="@+id/instructionBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:textColor="@color/white"
            android:background="@drawable/btn_login"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/aboutUsBtn"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:textColor="@color/white"
            android:background="@drawable/btn_login"
            android:layout_marginRight="10dp"/>

        <Button
            android:id="@+id/milestonesBtn"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/milestones"
            android:textColor="@color/white"
            android:background="@drawable/btn_login"/>
    </LinearLayout>
</RelativeLayout>